src/test/ui/generator/resume-arg-late-bound.stderr
error[E0308]: mismatched types
  --> $DIR/resume-arg-late-bound.rs:15:5
   |
LL |     test(gen);
   |     ^^^^ one type is more general than the other
   |
   = note: expected type `for<'a> Generator<&'a mut bool>`
              found type `Generator<&mut bool>`

error[E0308]: mismatched types
  --> $DIR/resume-arg-late-bound.rs:15:5
   |
LL |     test(gen);
   |     ^^^^ one type is more general than the other
   |
   = note: expected type `for<'a> Generator<&'a mut bool>`
              found type `Generator<&mut bool>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
